frontend/test/should_fail/deque_003.grg
using deque_model_001;

rule concatenateWrongType {
	a:A;

	modify {
		eval {
			a.intDeque = a.intDeque + deque<int>] a.stringValue [;
		}
	}
}
